<resources>
    <string name="app_name">HealthRobot</string>

    <!--测一测文本-->
    <string name="htmlString"><![CDATA[
        <h5>1.什么样的拍照姿势最正确呢？</h5>
<p>* 拍正脸<br/>
  * 眼睛与镜头保持水平<br/>
  * 放松面部，别做表情
</p>
<br/><br/>
<h5>2.什么样的皮肤状态下监测最准呢？</h5>
<p style="">我们不建议在以下状态中检测:<br/>
  <font color="#FF0000">×</font> 洁面后立马测（洗面奶会洗去脸上的油脂导致检测结果偏干）<br/>
  <font color="#FF0000">×</font> 擦完护肤品立马测（例如乳液面霜会补充脸上的油脂，导致监测结果偏油）<br/><br/><br/>
  我们比较建议在以下状态中检测：<br/>
  早晨起床后，洁面前；<br/>
  晚上抹完护肤品，等护肤品完全吸收，至少2小时后。<br/><br/><br/>
  其他素颜或者裸脸状态下也可，尽量避免护肤品和化妆品的干扰。<br/>
  以白墙为背景最好，正常室内光照即可。
</p>
<br/><br/>
<h5>3.什么光照环境下监测最准呢？</h5>
<p>我们的检测主要以闪光灯为主光源，因此要避免强烈的环境光。环境光太强，不仅会干扰闪光灯的反光，还会导致照片曝光过度，从而影响检测结果<br/><br/><br/>
  不建议在以下环境中检测：<br/>
  <font color="#FF0000">×</font> 室外（无论晴天还是雨天）<br/>
  <font color="#FF0000">×</font> 靠窗边、靠门边<br/>
  <font color="#FF0000">×</font> 室内非常强烈的灯光下<br/><br/><br/>
  建议在以下环境中检测：<br/>
  一般室内光照下都可以，注意不要逆光哦。
</p>
<br/><br/>
<h5>4.怎样准确地了解自己的肤质及体质呢？</h5>
<p>皮肤的出油状态是不断变化的，早上和晚上就有差异，还会受到饮食、身体状况、使用的护肤品的影响。而每一次肤质检测，测的都是当下的状态。而且人的肤质也会随着季节、年龄的变化而发生改变。建议每周至少测2天，每次至少重复测2遍，以抵消角度的影响<br/>
</p>
        ]]></string>

    <!--黑头-->
    <string name="heitou">
        你有轻度黑头，需要注意鼻部的清洁，定期祛角质，不要拿手去挤压黑头。避免洗脸的水温过高，注重保湿，促进皮肤水油平衡。
    </string>
    <!--肤色-->
    <string name="fuse">
        你的肤色属于自然肤色，较自然，也是亚洲人最常见的肤色，平时比较容易晒黑，应注意做好补水保湿，轻度美白以及防晒工作来保护自己的肌肤。
    </string>

    <!--体质1:非常强的油性皮肤-->
    <string name="bodyConstitution1">
        你是非常强的油性皮肤，在中医上属于湿热实体质。多数人血压会在正常偏高范围内，也是容易导致肥胖的体质类型。你的皮肤弹性较高，不容易产生细纹；但油脂分泌过剩，毛孔容易堵塞，容易出现肤色黯沉、毛孔粗大或痤疮等问题；平时要做好皮肤彻底的清洁和补水工作。适当多进行一些户外运动，以促进代谢和体内过剩的营养物质的燃烧。
    </string>
    <!--饮食建议-->
    <string name="food1">
        ① 肉类及蔬菜\n
        海带、裙带菜、羊栖菜、豆腐、萝卜、赤小豆、菠菜、茄子、黄瓜、丝瓜、芦荟、大豆、芹菜、菊花、薏仁、龙须菜、豆乳、螃蟹\n
        ② 水果饮品\n
        西瓜、梨、奇异果、火龙果、柚子\n
        ③ 油脂\n
        玉米油、大豆油、薏米仁油、蛋黄油、葡萄籽油
    </string>
    <!--中药-->
    <string name="medicine1">
        大黄牡丹皮汤
    </string>
    <!--生药-->
    <string name="drag1">
        ① 薏米仁\n
        ② 芦荟\n
        ③ 黄柏\n
        ④ 当归
    </string>

    <!--体质2:强油性皮肤-->
    <string name="bodyConstitution2">
        你是强油性皮肤，在中医上属于湿寒实体质。该体质的人体形容易过胖或过瘦，腹部松软不紧实。身体某些部位时常出现无来由的疼痛，容易烦躁、健忘、性情急躁。皮肤出油，并且排汗不畅，特别是T区部位是脸部肌肤护理的重点。日常要做好皮肤的彻底清洁，T区部位建议用清洁力较强的洁面产品，脸部其他部位用稍柔和一点的洁面乳。做好全脸的补水保湿，促进肌肤水油平衡。平常要吃些活血、散结、行气的食物，少食肥肉等，并保持足够的睡眠。
    </string>
    <!--饮食建议-->
    <string name="food2">
        ① 肉类及蔬菜\n
        葱、紫苏、蒜、艾叶、胡椒、蒲公英、咖喱、藤子椒\n
        ② 水果饮品\n
        菠萝、咖啡、柑桔\n
        ③ 油脂\n
        玉米油、大豆油、薏米仁油、蛋黄油
    </string>
    <!--中药-->
    <string name="medicine2">
        桂枝茯苓丸
    </string>
    <!--生药-->
    <string name="drag2">
        ① 陈皮\n
        ② 艾叶
    </string>

    <!--体质3:油性皮肤-->
    <string name="bodyConstitution3">
        你是油性皮肤，在中医上属于虚热湿体质。此种体质的人体型虚胖者占多数容易出虚汗。易感冒，抵抗力差，对周围环境变化敏感。在皮肤护理上面，注意那些气味太芳香的产品。含酒精和果酸成分的产品对皮肤刺激大，对敏感性肌肤无疑雪上加霜；在保湿，高水分的范围内挑选护肤品和彩妆品，使用非常柔和的眼部卸妆乳，不妨使用含有舒缓因子的矿泉水喷雾来清洁面部。宜多吃益气健脾的食物，运动以柔缓为主，平时可按摩足三里穴。
    </string>
    <!--饮食建议-->
    <string name="food3">
        ① 肉类及蔬菜\n
        萝卜、芦荟、豆芽、西红柿、大豆、牡蛎、蕨菜、荞麦、鲤鱼、乌贼、猪肉、田螺、鸡蛋\n
        ② 水果饮品\n
        玉米、葡萄、薏仁、牛奶\n
        ③ 油脂\n
        玉米油、大豆油、薏米仁油、蛋黄油、葡萄籽油\n
    </string>
    <!--中药-->
    <string name="medicine3">
        加味逍遥散
    </string>
    <!--生药-->
    <string name="drag3">
        ① 薏米仁\n
        ② 芦荟\n
        ③ 黄柏\n
        ④ 当归
    </string>

    <!--体质4:弱油性皮肤-->
    <string name="bodyConstitution4">
        你是弱油性皮肤，在中医上属于虚寒湿体质。此种体质的人群大多脾胃虚弱，注意要多吃易消化食物，如稀饭，粥等，少吃寒凉食品，吃些大枣、山药这些具有健脾功能的食物。皮肤护理方面，除了要做好基础的补水保湿之外，要注意祛黄提亮，唤醒肌肤运作，让血管和皮肤之间的养分交换顺畅。选用合适的乳液或精华液轻轻按摩脸部肌肤，按摩前记得先搓热双手，冷冰冰的指腹只有反效果喔。不要挑食，要营养均衡，搭配合理，多喝水，注意睡眠。适当运动。
    </string>
    <!--饮食建议-->
    <string name="food4">
        ① 肉类及蔬菜\n
        甘蓝、生姜、紫苏、蕨菜、鲦鱼、竹筴鱼、鳗鱼、河豚、鸡肉、羊肉、香鱼、海胆、鲤鱼、鸡蛋\n
        ② 水果饮品\n
        玉米、石榴、大枣、木瓜、葡萄、柑桔、栗子\n
        ③ 油脂\n
        玉米油、大豆油、薏米仁油、蛋黄油\n
    </string>
    <!--中药-->
    <string name="medicine4">
        当归芍药散
    </string>
    <!--生药-->
    <string name="drag4">
        ① 陈皮\n
        ② 艾叶
    </string>

    <!--体质5:弱干性肌肤-->
    <string name="bodyConstitution5">
        你是弱干性肌肤，在中医上属于燥热实体质。面颊黑红、眼睛干涩，经常有口干舌燥以及大便干结之感。耐受不了暑热，也较容易出现失眠的症状。由于肤质偏干，所以肌肤易生细纹甚至斑点，平常一定要做到卸妆彻底，除了要使用温和的洁面产品之外，更要定期清理肌肤的死皮角质。日常除了基础的补水保湿之外，也要考虑有一些滋润度较高的面霜。平常要养成多喝水的习惯，及时给身体补充水分。
    </string>
    <!--饮食建议-->
    <string name="food5">
        ① 肉类及蔬菜\n
        萝卜、牛蒡、龙须菜、菠菜、桔梗、豆芽\n
        ② 水果饮品\n
        玉米、石榴、木瓜、葡萄、柑桔、栗子\n
        ③ 油脂\n
        玉米油、大豆油、薏米仁油、蛋黄油\n
    </string>
    <!--中药-->
    <string name="medicine5">
        桃仁承气汤
    </string>
    <!--生药-->
    <string name="drag5">
        ① 紫根\n
        ② 蜂蜜\n
        ③ 甘草
    </string>

    <!--体质6:干性肌肤-->
    <string name="bodyConstitution6">
        你是干性肌肤，在中医上属于燥寒实体质，一般常有水分不足、机能衰退、咳、尿量过多、便秘等症状。 面部肌肤略显粗糙，并且色素沉积会显得皮肤有点黑。在肌肤护理方面，通过外用高效保湿，适度滋润的护肤品，让肌肤达到最佳的水油平衡状态，才能有效改善肌肤过于干燥的情况。干性皮肤相比其他肤质更为脆弱，做好防晒是对抗干燥、肌肤衰老、色斑的关键。
    </string>
    <!--饮食建议-->
    <string name="food6">
        ① 肉类及蔬菜\n
        红花、西红柿、牛蒡、桔梗\n
        ② 水果饮品\n
        菠萝、枇杷、桃、杏（杏仁）\n
        ③ 油脂\n
        红花油、藏花油、杏仁油、胡萝卜油、花生油\n
    </string>
    <!--中药-->
    <string name="medicine6">
        桂枝茯苓丸
    </string>
    <!--生药-->
    <string name="drag6">
        ① 红花\n
        ② 当归\n
        ③ 甘草
    </string>

    <!--体质7:强干性肌肤-->
    <string name="bodyConstitution7">
        你是强干性肌肤，在中医上属于虚热燥体质。一般常有多汗、口渴等症状，这种体质大部分人有两颧部位皮肤发红的特征，唇色较深，脸上很容易长斑。在肌肤护理方面，选择适合自己的美白祛斑产品。做完补水护理工作之后，建议再给肌肤做适当的精油滋润护理，让肌肤可以很好的吸收精油中的营养。生活习惯方面，不要等渴了再喝水，每天适当多喝水对于改善肤质大有裨益。
    </string>
    <!--饮食建议-->
    <string name="food7">
        ① 肉类及蔬菜\n
        白菜、青芋、萝卜、红薯、纳豆、马铃薯、牛蒡、山蒡芋、蕨菜、芝麻、牡蛎、百合、鸡蛋、面条、粒米、荞麦、蛋黄、小麦、乌贼、蚕豆、粘米糕、竹筴、鱼火距、橄榄油、猪肉\n
        ② 水果饮品\n
        面包、甘蔗、牛油、 牛奶、枣、生柿、蜂蜜、枸杞\n
        ③ 油脂\n
        紫根油、芝麻油、麦芽油、橄榄油、米糠油\n
    </string>
    <!--中药-->
    <string name="medicine7">
        柴胡桂枝干姜汤
    </string>
    <!--生药-->
    <string name="drag7">
        ① 紫根\n
        ② 蜂蜜\n
        ③ 甘草
    </string>

    <!--体质8:非常强的干性肌肤-->
    <string name="bodyConstitution8">
        你是非常强的干性皮肤，在中医上属于虚寒燥体质。此种体质的人属于贫血底，一般常有多汗、精力减退、多尿、虚弱等症状。为改善面色苍白、肌肤粗糙的状况，内调加外养要结合起来。多食含铁丰富的食物，如猪肝、瘦肉、奶制品、豆类、绿叶蔬菜等。适当补充酸性食物则有利于铁剂的吸收，改善贫血。护肤方面，要做到认真细致，不忽视每一步护肤步骤。使用高滋润度护肤品，配合精油按摩，日常也可以选择一些滋润性强的面膜和补水面膜，定期给肌肤细胞给养，防止肌肤过分缺水干燥而衰老！忌食辛辣、生冷不易消化的食物。平时可配合滋补食疗以补养身体。
    </string>
    <!--饮食建议-->
    <string name="food8">
        ① 肉类及蔬菜\n
        胡萝卜、马铃薯、红薯、甘蓝、白蓝、白菜、山芋、醋、南瓜、蕨菜、芝麻、百合\n
        ② 水果饮品\n
        乌梅、苹果、核桃、枣、木瓜、桃、枸杞\n
        ③ 油脂\n
        红花油、藏花油、杏仁油、胡萝卜油、花生油\n
    </string>
    <!--中药-->
    <string name="medicine8">
        芎归胶艾汤
    </string>
    <!--生药-->
    <string name="drag8">
        ① 红花\n
        ② 当归\n
        ③ 甘草
    </string>


    <!--voicechat app ID-->
    <string name="agora_app_id">df82778c111c4c57aa3f13fbca9f40cc</string>

    <!-- Strings related to login -->
    <string name="prompt_email">手机号</string>
    <string name="prompt_number">请输入手机号</string>
    <string name="prompt_check_code">请输入验证码</string>
    <string name="action_register">手机号登录</string>
    <string name="action_checkcode">获取验证码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address or number is invalid</string>
    <string name="error_incorrect_checkcode">验证码错误或失效，请重新获取</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- 个人信息 -->
    <string name="infom_name">姓名</string>
    <string name="infom_sex">性别</string>
    <string name="infom_birthday">出生日期</string>
    <string name="infom_area">所在区域</string>
    <string name="infom_address">详细地址：如道路、门牌号、小区、楼栋号、单元室等</string>
    <string name="infom_wechat">微信号</string>


    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>

    <!--医院科室-->
    <string-array name="hospital_department">
        <item>妇产科</item>
        <item>脾胃病科</item>
        <item>内分泌病科</item>
        <item>肺病科</item>
        <item>儿科</item>
        <item>皮肤科</item>
        <item>肾病科三</item>
        <item>眼科</item>
        <item>脑病科</item>
        <item>血液病科</item>
        <item>外三科（泌尿科）</item>
        <item>外一科（肝胆专业）</item>
        <item>推拿科</item>
        <item>外二科（血管专业）</item>
        <item>耳鼻喉科</item>
        <item>肿瘤科</item>
        <item>心理康复科</item>
        <item>肛肠科</item>
        <item>心血管病科</item>
        <item>风湿病科</item>
        <item>骨科</item>
        <item>肝病科</item>
        <item>针灸科</item>
        <item>康复科</item>
    </string-array>


</resources>
