<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_personal_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="aiwac.admin.com.healthrobot.activity.loginandregister.PersonalInformationActivity">


    <ScrollView
        android:id="@+id/login_form"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 姓名 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/radius_layout"
                android:orientation="horizontal"
                android:layout_marginBottom="20sp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="6"
                    android:paddingLeft="5sp">


                    <AutoCompleteTextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackivory"
                        android:inputType="textEmailAddress"
                        android:hint="@string/infom_name"
                        android:maxLines="1"
                        android:textColor="@color/border_clo"/>

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/radius_layout"
                android:orientation="horizontal"
                android:layout_marginBottom="20sp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="6"
                    android:paddingLeft="5sp">


                    <AutoCompleteTextView
                        android:id="@+id/tv_sex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackivory"
                        android:inputType="textEmailAddress"
                        android:hint="@string/infom_sex"
                        android:maxLines="1"
                        android:textColor="@color/border_clo"/>

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/radius_layout"
                android:orientation="horizontal"
                android:layout_marginBottom="20sp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="6"
                    android:paddingLeft="5sp">


                    <AutoCompleteTextView
                        android:id="@+id/tv_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackivory"
                        android:inputType="textEmailAddress"
                        android:hint="@string/infom_birthday"
                        android:maxLines="1"
                        android:textColor="@color/border_clo"/>

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/radius_layout"
                android:orientation="horizontal"
                android:layout_marginBottom="20sp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="6"
                    android:paddingLeft="5sp">


                    <AutoCompleteTextView
                        android:id="@+id/tv_wechat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackivory"
                        android:inputType="textEmailAddress"
                        android:hint="@string/infom_wechat"
                        android:maxLines="1"
                        android:textColor="@color/border_clo"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/radius_layout"
                android:orientation="horizontal"
                android:layout_marginBottom="20sp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="6"
                    android:paddingLeft="5sp">


                    <AutoCompleteTextView
                        android:id="@+id/tv_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackivory"
                        android:inputType="textEmailAddress"
                        android:hint="@string/infom_area"
                        android:maxLines="1"
                        android:textColor="@color/border_clo"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/radius_layout"
                android:orientation="horizontal"
                android:layout_marginBottom="20sp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="6"
                    android:paddingLeft="5sp">


                    <AutoCompleteTextView
                        android:id="@+id/tv_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackivory"
                        android:inputType="textEmailAddress"
                        android:hint="@string/infom_address"
                        android:maxLines="1"
                        android:textColor="@color/border_clo"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/send_button"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/login_emptylogbutton"
                android:text="确定"
                android:textColor="@color/theme"
                android:textAlignment="center"
                android:layout_marginTop="10sp"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
