<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_page"
    android:id="@+id/activity_register"
    tools:context="aiwac.admin.com.healthrobot.activity.loginandregister.RegisterActivity">

    <RelativeLayout style="@style/topbar_bg" >

        <ImageButton style="@style/topbar_return_img" />

        <TextView
            style="@style/topbar_title"
            android:layout_centerHorizontal="true"
            android:text="填写信息" />
    </RelativeLayout>

    <View style="@style/divider_horizontal_1px" />


    <ScrollView
        style="@style/match_match"

        android:layout_weight="1" >

        <LinearLayout style="@style/ll_vertical_match_match" >

            <LinearLayout
                style="@style/ll_vertical_match_wrap"
                android:layout_marginBottom="@dimen/padding_huge"
                android:layout_marginTop="@dimen/padding_huge" >
            </LinearLayout>

            <View style="@style/divider_horizontal_1px" />

            <!-- 姓名 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/radius_layout"
                android:orientation="horizontal"
                android:layout_marginBottom="20sp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="6"
                    android:paddingLeft="5sp">


                    <AutoCompleteTextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackivory"
                        android:inputType="textEmailAddress"
                        android:hint="@string/infom_name"
                        android:maxLines="1"
                        android:textColor="@color/border_clo"/>

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_sex"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/radius_layout"
                android:orientation="horizontal"
                android:layout_marginBottom="20sp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="6"
                    android:paddingLeft="5sp">


                    <AutoCompleteTextView
                        android:id="@+id/tv_sex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackivory"
                        android:inputType="textEmailAddress"
                        android:hint="@string/infom_sex"
                        android:maxLines="1"
                        android:textColor="@color/border_clo"/>

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_birthday"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/radius_layout"
                android:orientation="horizontal"
                android:layout_marginBottom="20sp"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="6"
                    android:clickable="false">


                    <AutoCompleteTextView
                        android:id="@+id/tv_birthday"
                        android:clickable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackivory"
                        android:inputType="textEmailAddress"
                        android:hint="@string/infom_birthday"
                        android:maxLines="1"
                        android:textColor="@color/border_clo"/>

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/radius_layout"
                android:orientation="horizontal"
                android:layout_marginBottom="20sp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="6"
                    android:paddingLeft="5sp">


                    <AutoCompleteTextView
                        android:id="@+id/tv_wechat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackivory"
                        android:inputType="textEmailAddress"
                        android:hint="@string/infom_wechat"
                        android:maxLines="1"
                        android:textColor="@color/border_clo"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_area"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/radius_layout"
                android:orientation="horizontal"
                android:layout_marginBottom="20sp"
                android:clickable="true">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="6"
                    android:paddingLeft="5sp">


                    <AutoCompleteTextView
                        android:id="@+id/tv_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackivory"
                        android:inputType="textEmailAddress"
                        android:hint="@string/infom_area"
                        android:maxLines="1"
                        android:textColor="@color/border_clo"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/radius_layout"
                android:orientation="horizontal"
                android:layout_marginBottom="20sp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="6"
                    android:paddingLeft="5sp">


                    <AutoCompleteTextView
                        android:id="@+id/tv_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackivory"
                        android:inputType="textEmailAddress"
                        android:hint="@string/infom_address"
                        android:maxLines="1"
                        android:textColor="@color/border_clo"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/send_button"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/login_emptylogbutton"
                android:text="确定"
                android:textColor="@color/theme"
                android:textAlignment="center"
                android:layout_marginTop="10sp"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
