<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity_page" >

    <RelativeLayout style="@style/topbar_bg" >

        <TextView
            style="@style/topbar_title"
            android:layout_centerHorizontal="true"
            android:text="手机号登录" />
    </RelativeLayout>



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_weight="1">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/btn_login_slide"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/login_person" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:layout_gravity="center_vertical"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/register_number_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_number"
                        android:textSize="20sp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/theme"
                        android:background="@null"
                        android:textAlignment="center"
                        />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/btn_login_slide"
                android:padding="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/login_checkcode" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_gravity="center_vertical"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/register_checkcode_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_check_code"
                        android:textSize="20sp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/theme"
                        android:background="@null"
                        android:textAlignment="center"
                        />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center_vertical"
                    android:src="@drawable/login_line" />

                <Button
                    android:id="@+id/register_check_code_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:layout_weight="3"
                    android:text="@string/action_checkcode"
                    android:textSize="24sp"
                    android:textColor="#4385C8"
                    android:layout_gravity="center"
                    android:background="@null"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/register_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="false"
                android:enabled="false"
                android:layout_marginTop="20dp"
                android:text="立即登录"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="@drawable/login_register"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
